src-tauri/build_results.txt
   Compiling accounting-flow v0.1.0 (C:\Projects\AccountingFlow\src-tauri)
warning: unused doc comment
  --> src\core\security.rs:7:1
   |
 7 | / /**
 8 | |  * [Security Module] Tenant Isolation & KMS (Key Management System)
 9 | |  * 
10 | |  * 엔터프라이즈급 보안 요구사항을 충족하기 위한 격리 및 키 관리 모듈입니다.
...  |
15 | |  * 3. In-Memory Vault: 키의 메모리 내 안전한 격리 보관 (실제 운영 시에는 Encrypted File/Hardware HSM 연동 권장)
16 | |  */
   | |___^ rustdoc does not generate documentation for macro invocations
   |
   = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion
   = note: `#[warn(unused_doc_comments)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `StartupInsights`
 --> src\accounting\ir_engine.rs:3:55
  |
3 | use crate::accounting::insights::{calculate_insights, StartupInsights};
  |                                                       ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `JournalEntry`
 --> src\accounting\parser.rs:1:46
  |
1 | use crate::core::models::{ParsedTransaction, JournalEntry};
  |                                              ^^^^^^^^^^^^

warning: unused import: `Data`
 --> src\accounting\parser.rs:5:30
  |
5 | use calamine::{Reader, Xlsx, Data};
  |                              ^^^^

warning: unused import: `crate::ai::robust_parser::parse_robust_csv`
 --> src\ai\migration_engine.rs:2:5
  |
2 | use crate::ai::robust_parser::parse_robust_csv;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0063]: missing field `num_employees` in initializer of `EntityMetadata`
   --> src\commands.rs:200:9
    |
200 |         crate::core::models::EntityMetadata {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `num_employees`

warning: unused variable: `total`
  --> src\accounting\inventory_bridge.rs:14:9
   |
14 |     let total = net_amount + vat_amount;
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_total`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `today`
  --> src\accounting\forecast_engine.rs:36:9
   |
36 |     let today = chrono::Local::now().naive_local();
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_today`

warning: unused variable: `net_assets`
   --> src\accounting\report_engine.rs:146:9
    |
146 |     let net_assets: f64 = financial_overview.total_revenue - financial_overview.total_expenses; // Simplified
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_net_assets`

warning: value assigned to `capitalized_amount` is never read
  --> src\accounting\advanced_ledger.rs:41:38
   |
41 |         let mut capitalized_amount = 0.0;
   |                                      ^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `header_map` is never read
  --> src\accounting\parser.rs:74:26
   |
74 |     let mut header_map = std::collections::HashMap::new();
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

warning: unused variable: `key`
   --> src\accounting\parser.rs:140:10
    |
140 |     for (key, group) in groups {
    |          ^^^ help: if this is intentional, prefix it with an underscore: `_key`

warning: value assigned to `tax` is never read
   --> src\tax\tax_bridge.rs:196:19
    |
196 |     let mut tax = 0.0;
    |                   ^^^
    |
    = help: maybe it is overwritten before being read?

warning: variable does not need to be mutable
  --> src\ai\office_parser.rs:23:13
   |
23 |         let mut slide_indices: Vec<usize> = (1..=50).collect(); // Max 50 slides check
   |             ----^^^^^^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0063`.
warning: `accounting-flow` (lib) generated 13 warnings
error: could not compile `accounting-flow` (lib) due to 1 previous error; 13 warnings emitted
